--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minnavigation",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://lrlucas.github.io/minnavigation/",
   "dependencies": {
     "gsap": "^2.0.2",
     "react": "^16.7.0",
@@ -12,7 +13,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
